Fix '了解更多' button: ensure dark text color is visible on white background with !important

--- a/src/Projects/YLPM/Styles/main.styl
+++ b/src/Projects/YLPM/Styles/main.styl
@@ -116,7 +116,7 @@ p, .body-text
 
 .btn-primary
   background-color gray-600
-  color background-color
+  color white
   border-color gray-600
 
   &:hover
@@ -260,15 +260,15 @@ p, .body-text
     justify-content center
     margin-top spacing-lg
 
-    .btn-primary
-      background-color white
-      color gray-800 !important
-      border-color white
+    a.btn.btn-primary
+      background-color white !important
+      color #212121 !important
+      border-color white !important
 
       &:hover
-        background-color gray-100
-        border-color gray-100
-        color gray-800 !important
+        background-color #f5f5f5 !important
+        border-color #f5f5f5 !important
+        color #212121 !important
 
     .btn-secondary
       background-color transparent
